deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: peercalls
  labels:
    app.kubernetes.io/name: peercalls
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: peercalls
